/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
2002-01-19 13:39 UTC-0300 Horacio Roldan <harbour_ar@yahoo.com.ar>
   * source/rdd/dbfcdx1.c
     ! fixed a bug in descending skipping
     + added support for ordKeyNo() and ordKeyCount()

2002-01-19 08:00 UTC+0700 Andi Jahja <harbour@cbn.net.id>
   * source/rtl/typefile.prg
     * modification to be more Clip*r compliant and behaviour.

2002-01-19 05:00 UTC+0700 Andi Jahja <harbour@cbn.net.id>
   * include/hbexpra.c
   * source/vm/hvm.c
     * Optimized Eval() processing, and added support for bBlock:Eval().
   * tests/speed.prg
     * Test program for bBlock:Eval().
       Time consumed, previously: 11.59 secs
                      now       :  5.06 secs
       Environment: 1 GHz, 128 MB, BCC 5.5.1, SimpLex and -DHB_FM_STATISTICS_OFF
   <with thanks to Ron Pinkas>

2002-01-18 17:45 UTC+0300 Alexander Kresin <alex@belacy.belgorod.su>
  * source/rdd/dbfntx/dbfntx1.c
    * support of EVAL and EVERY clauses of INDEX ON command implemented

2002-01-18 13:42 UTC+0300 Alexander Kresin <alex@belacy.belgorod.su>
  * source/rdd/dbfntx/dbfntx1.c
    * WHILE, etc, conditions support implemented (DBFNTX )

2002-01-17 14:15 UTC-0500 David G. Holm <dholm@jsd-llc.com>
  * contrib/Makefile
    + Added platform checks to determine which libraries to build.

  * include/hbver.h
    * Identify what my OS/2 38.1 builds are based on.

2002-01-17 21:50 UTC+0300 Alexander Kresin <alex@belacy.belgorod.su>
  * source/rdd/dbfntx/dbfntx1.c
  * source/rdd/dbcmd.c
    ! a bug fixed, related to conditional indexing

2002-01-17 15:32 UTC+0300 Alexander Kresin <alex@belacy.belgorod.su>
  * source/rdd/dbfntx/dbfntx1.c
  * include/hbrddntx.h
    * FOR condition support implemented ( DBFNTX )

2002-01-16 00:14 UTC+0100 Maurilio Longo <maurilio.longo@libero.it>
  * common/hbgete.c